--- a/style.css
+++ b/style.css
@@ -1,340 +1,374 @@
 * {
-    padding: 0;
-    margin: 10;
-    font-family: "Josefin Sans", sans-serif;
-    box-sizing: border-box;
-  }
-  
-  .hero {
-    height: 100vh;
-    width: 100%;
-    background-image: url(../sandbox/foto-cover-werb.jpg)
-    background-size: cover;
-    background-position: center;
-    background: black;
-   
-  }
+  padding: 0;
+  margin: 1px;
+  font-family: "Josefin Sans", sans-serif;
+  box-sizing: border-box;
+}
 
-  nav {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding-top: 45px;
-      padding-left: 8%;
-      padding-right: 8%;
-  }
+.hero {
+  height: 100vh;
+  width: 100%;
+  background-size: center;
+  background-position: center;
+  background: black;
+}
 
-  .logo {
-    color: white;
-    font-size: 35px;
-    letter-spacing: 1px;
-    cursor: pointer;
-  }
+/* .hero1 {
+  height: 1px;
+  width: 100%;
+  background-size: center;
+  background-position: center;
+  background: black;
+} */
 
-  span {
-      color: #f9004d;
-  }
+/* .boxunderphoto {
+  height: 10vh;
+  width: 100%;
+  background-size: center;
+  background-position: center;
+  background: black;
+} */
 
-  nav ul li {
-      list-style-type: none;
-      display: inline-block;
-      padding: 10px 25px;
-  }
+.navigationbar-logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 45px;
+  padding-left: 8%;
+  padding-right: 8%;
+  background-color: #000;
+}
 
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    text-transform: capitalize;
-  }
+.logo {
+  color: white;
+  font-size: 35px;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
 
-  nav ul li a:hover {
-    color; #f9004d;
-    transition: .9s;
-  }
+span {
+  color: #f9004d;
+}
 
-  .btn{
-      background-color: #f9004d;
-      color: white;
-      text-decoration: none;
-      border: 2px solid transparent;
-      font-weight: bold;
-      padding: 10px 25px;
-      border-radius: 30px;
-      transition: transform .4s;
-  }
+nav ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 10px 25px;
+}
 
-  .btn:hover{
-      transform: scale(1.2);
-  }
+nav ul li a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  text-transform: capitalize;
+}
 
-  .content{
-    position: absolute;
-    top: 50%;
-    left: 8%;
-    transform: translateY(-50%);
-  }
+nav ul li a:hover {
+  color: #f9004d;
+  transition: 0.9s;
+}
 
-  h1 {
-      color: white;
-      margin: 20px 0px 20px;
-      font-size: 75px;
-    }
-  h3{
-        color: white;
-        font-size: 25px;
-        margin-bottom: 50px;
-    }
+.btn {
+  background-color: #f9004d;
+  color: white;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 10px 25px;
+  border-radius: 30px;
+  transition: transform 0.4s;
+}
 
-  h4{
-        color: rgba(220, 43, 43, 0.37);
-        letter-spacing: 2px;
-        font-size: 20px;
-    }
+.btn:hover {
+  transform: scale(1.2);
+}
 
-    .newsletter form{
-        width: 380px;
-        max-width: 100%;
-        position: relative;
-    }
+.content-voorpagina {
+  position: absolute;
+  top: 50%;
+  left: 8%;
+  transform: translateY(-50%);
+}
 
-    .newsletter form input:first-child{
-        display: inline-block;
-        width: 100%;
-        padding: 14px 130px 14px 15px;
-        border: 2px solid #f9004d;
-        outline: none;
-        border-radius: 30px;
-    }
+h1 {
+  color: white;
+  margin: 20px 0px 20px;
+  font-size: 75px;
+}
+h3 {
+  color: white;
+  font-size: 25px;
+  margin-bottom: 50px;
+}
+
+h4 {
+  color: rgba(220, 43, 43, 0.37);
+  letter-spacing: 2px;
+  font-size: 20px;
+}
+
+.newsletter form {
+  width: 380px;
+  max-width: 100%;
+  position: relative;
+}
+
+.newsletter form input:first-child {
+  display: inline-block;
+  width: 100%;
+  padding: 14px 130px 14px 15px;
+  border: 2px solid #f9004d;
+  outline: none;
+  border-radius: 30px;
+}
+
 /* button "send asap!"*/
-    .newsletter form input:last-child {
-        position: absolute;
-        display: inline-block;
-        outline: none;
-        border: none;
-        padding: 10px 30px;
-        border-radius: 30px;
-        background-color: #f9004d;
-        color: white;
-        box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
-        top: 6px;
-        right: 6px;
-    }
+.newsletter form input:last-child {
+  position: absolute;
+  display: inline-block;
+  outline: none;
+  border: none;
+  padding: 10px 30px;
+  border-radius: 30px;
+  background-color: #f9004d;
+  color: white;
+  box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
+  top: 6px;
+  right: 6px;
+}
 
-    .about {
-        width: 100px;
-        padding: 100px 0px;
-        background-color: #191919;
-    }
+.about {
+  display: flex;
+  width: 100%;
+  padding: auto;
+  background-color: #000;
+}
 
-    .about img{
-        height: auto;
-        width: 430px;
-    }
-    
-    .about-text{
-        width: 550;
-    }
+.photo {
+  /* height: auto; */
+  width: 430px;
+  position: relative;
+}
 
-    .main{
-        width: 1130px;
-        max-width: 95%;
-        margin: 0 auto;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-    }
+.about-text {
+  width: 50%;
+}
+/* 
+.img {
+  align-content: center;
+} */
 
-   .about-text h2{
-       color: white;
-       font-size: 75px;
-       text-transform: capitalize;
-       margin-bottom: 20px;
-   }
+.main {
+  width: 1130px;
+  max-width: 95%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
 
-   .about-text h5 {
-    color: white;
-    letter-spacing: 2px;
-    font-size: 22px;
-    margin-bottom: 25px;
-    text-transform: capitalize;
-   }
+.about-text h2 {
+  color: white;
+  font-size: 75px;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+}
 
-   .about-text p {
-    color: #fcfc;
-    letter-spacing: 1px;
-    line-height: 28px;
-    font-size: 18px;
-    margin-bottom: 45px;
-   }
+.about-text h5 {
+  color: white;
+  letter-spacing: 2px;
+  font-size: 22px;
+  margin-bottom: 25px;
+  text-transform: capitalize;
+}
 
-   button {
-       background-color: #f9004d;
-       color: white;
-       text-decoration: none;
-       border: 2px solid transparent;
-       font-weight: bold;
-       padding: 13px 30px;
-       border-radius: 30px;
-       transition: .4s;
-   }
+.about-text p {
+  color: #fcfc;
+  letter-spacing: 1px;
+  line-height: 28px;
+  font-size: 18px;
+  margin-bottom: 45px;
+}
 
-   button:hover {
-       background-color: transparent;
-       border: 2px solid #f9004d;
-       cursor: pointer;
-   }
+button {
+  background-color: #f9004d;
+  color: white;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 13px 30px;
+  border-radius: 30px;
+  transition: 0.4s;
+}
 
-   .service{
-       background: #101010;
-       width: 100%;
-       padding: 100px 0px;
-   }
+button:hover {
+  background-color: transparent;
+  border: 2px solid #f9004d;
+  cursor: pointer;
+}
 
-   .title h2 {
-       color: white;
-       font-size: 75px;
-       width: 1130px;
-       margin: 30px auto;
-       text-align: center;
-   }
+.service {
+  background: #101010;
+  width: 100%;
+  padding: 100px 0px;
+}
 
-   .box {
-       display: flex;
-       justify-content: center;
-       align-items: center;
-       min-height: 400px;
-   }
+.title h2 {
+  color: white;
+  font-size: 75px;
+  width: 1130px;
+  margin: 30px auto;
+  text-align: center;
+}
 
-   .card {
-       height: 365px;
-       width: 335px;
-       padding: 20px 35px;
-       background: #191919;
-       border-radius: 20px;
-       margin: 15px;
-       position: relative;
-       overflow: hidden;
-       text-align: center;
-   }
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 400px;
+}
 
-   .card i {
-       font-size: 50px;
-       display: block;
-       text-align: center;
-       margin: 25px 0px;
-       color: #f9004d;
-   }
+.card {
+  height: auto;
+  width: 335px;
+  padding: 20px 35px;
+  background: #191919;
+  border-radius: 20px;
+  margin: 15px;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+}
 
-   h5 {
-       color: white;
-       font-size: 23px;
-       margin-bottom: 15px;
-   }
+.card .image {
+  width: 170px;
+  height: 170px;
+}
 
-   .pra p {
-    color: #fcfc;
-    font-size: 16px;
-    line-height: 27px;
-    margin-bottom: 25px;
-   }
+.card .image svg {
+  width: 170px;
+  height: 170px;
+}
 
-   .card .button {
-    background-color: #f9004d;
-    color: white;
-    text-decoration: none;
-    border: 2px solid transparent;
-    font-weight: bold;
-    padding: 9px 22px;
-    border-radius: 30px;
-    transition: .4s;
-   }
+/* .card i {
+  font-size: 50px;
+  display: block;
+  text-align: center;
+  margin: 25px 0px;
+  color: #f9004d;
+} */
 
-   .card .button:hover {
-    background-color: transparent;
-    border: 2px solid #f9004d;
-    cursor: pointer;
-   }
+h5 {
+  color: white;
+  font-size: 23px;
+  margin-bottom: 15px;
+}
+
+.pra p {
+  color: #858585;
+  font-size: 16px;
+  line-height: 27px;
+  margin-bottom: 25px;
+}
+
+.card .button {
+  background-color: #f9004d;
+  color: white;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 9px 22px;
+  border-radius: 30px;
+  transition: 0.4s;
+}
+
+.card .button:hover {
+  background-color: transparent;
+  border: 2px solid #f9004d;
+  cursor: pointer;
+}
 
 .contact-me {
-    width: 100%;
-    height: 290px;
-    background: #191919;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
+  width: 100%;
+  height: 290px;
+  background: #191919;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .contact-me p {
-    color: white;
-    font-size: 10px;
-    font-weight: bold;
-    margin-bottom: 25px;
+  color: white;
+  font-size: 10px;
+  font-weight: bold;
+  margin-bottom: 25px;
 }
 
-.contact-me .button-two{
-    background-color: #f9004d;
-    color: white;
-    text-decoration: none;
-    border: 2px solid transparent;
-    font-weight: bold;
-    padding: 13px 30px;
-    border-radius: 30px;
-    transition: .4s;
+.contact-me .button-two {
+  background-color: #f9004d;
+  color: white;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 13px 30px;
+  border-radius: 30px;
+  transition: 0.4s;
 }
-.contact-me .button-two:hover{
-    background-color: transparent;
-    border: 2px solid #f9004d;
-    cursor: pointer;
-}
-
-footer{
-    position: relative;
-    width: 100%;
-    height: 400px;
-    background: #101010;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.contact-me .button-two:hover {
+  background-color: transparent;
+  border: 2px solid #f9004d;
+  cursor: pointer;
 }
 
-footer p:nth-child(1){
-    font-size: 30px;
-    color: white;
-    margin-bottom: 20px;
-    font-weight: bold;
-}
-footer p:nth-child(2){
-    color: white;
-    font-size: 17px;
-    width: 500px;
-    text-align: center;
-    line-height: 26px;
+footer {
+  position: fixed;
+  width: 100%;
+  height: 400px;
+  background: #101010;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.social{
-    display: flex;
+/* footer p:nth-child(1) {
+  font-size: 30px;
+  color: white;
+  margin-bottom: 20px;
+  font-weight: bold;
+} */
+
+/* footer p:nth-child(2) {
+  color: white;
+  font-size: 17px;
+  width: 500px;
+  text-align: center;
+  line-height: 26px;
+} */
+
+.social {
+  display: flex;
 }
-.social a{
-    width: 45px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #f9004d;
-    border-radius: 50%;
-    margin: 22px 10px;
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
+.social a {
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f9004d;
+  border-radius: 50%;
+  margin: 22px 10px;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
 }
 
-.social a:hover{
-    transform: calc(1.3);
-    transition: .3s;
+.social a:hover {
+  transform: calc(1.3);
+  transition: 0.3s;
 }
 
 .end {
-    position: absolute;
-    color: #f9004d; 
+  position: absolute;
+  color: #f9004d;
+}
