verandering footer menu foto

--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 * {
   padding: 0;
-  margin: 1px;
+  margin: 0;
   font-family: "Josefin Sans", sans-serif;
   box-sizing: border-box;
+}
+
+body {
+  background-color: #000;
 }
 
 .hero {
@@ -12,22 +16,6 @@
   background-position: center;
   background: black;
 }
-
-/* .hero1 {
-  height: 1px;
-  width: 100%;
-  background-size: center;
-  background-position: center;
-  background: black;
-} */
-
-/* .boxunderphoto {
-  height: 10vh;
-  width: 100%;
-  background-size: center;
-  background-position: center;
-  background: black;
-} */
 
 .navigationbar-logo {
   display: flex;
@@ -183,7 +171,7 @@ h4 {
 }
 
 .about-text p {
-  color: #fcfc;
+  color: white;
   letter-spacing: 1px;
   line-height: 28px;
   font-size: 18px;
@@ -208,15 +196,23 @@ button:hover {
 }
 
 .service {
-  background: #101010;
+  background-color: #000;
   width: 100%;
   padding: 100px 0px;
+}
+
+.photo {
+  height: auto;
+  max-width: 50%;
+  margin-left: 100px;
+  margin-bottom: 10px;
+  margin-top: -90px;
 }
 
 .title h2 {
   color: white;
   font-size: 75px;
-  width: 1130px;
+  width: 1030px;
   margin: 30px auto;
   text-align: center;
 }
@@ -243,11 +239,12 @@ button:hover {
 .card .image {
   width: 170px;
   height: 170px;
+  margin: 0 auto;
 }
 
 .card .image svg {
   width: 170px;
-  height: 170px;
+  height: 150px;
 }
 
 /* .card i {
@@ -325,7 +322,7 @@ footer {
   position: fixed;
   width: 100%;
   height: 400px;
-  background: #101010;
+  background: #000;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -345,22 +342,29 @@ footer {
   text-align: center;
   line-height: 26px;
 } */
+.sub-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  padding-top: 2%;
+}
 
 .social {
-  display: flex;
-}
-.social a {
   width: 45px;
   height: 45px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #f9004d;
+  background: red;
   border-radius: 50%;
   margin: 22px 10px;
-  color: white;
   text-decoration: none;
   font-size: 20px;
+}
+.social-wrapper {
+  display: flex;
+  flex-direction: row;
 }
 
 .social a:hover {
@@ -368,7 +372,9 @@ footer {
   transition: 0.3s;
 }
 
-.end {
-  position: absolute;
-  color: #f9004d;
+.footer-end {
+  display: flex;
+  justify-content: flex-end;
+  color: white;
+  width: 100%;
 }
