--- a/style.css
+++ b/style.css
@@ -9,10 +9,17 @@ body {
   background-color: #000;
 }
 
-.hero {
-  height: 100vh;
+.container {
+  max-width: 1140px;
   width: 100%;
-  background-size: center;
+  height: auto;
+  margin: 0px auto;
+  padding: 0px 30px;
+}
+
+.hero {
+  height: 80vh;
+  width: auto;
   background-position: center;
   background: black;
 }
@@ -83,6 +90,7 @@ h1 {
   margin: 20px 0px 20px;
   font-size: 75px;
 }
+
 h3 {
   color: white;
   font-size: 25px;
@@ -128,23 +136,21 @@ h4 {
 .about {
   display: flex;
   width: 100%;
-  padding: auto;
-  background-color: #000;
+  margin-bottom: 75px;
 }
 
-.photo {
-  /* height: auto; */
-  width: 430px;
-  position: relative;
+.about .image {
+}
+
+.about .image img {
+  width: 230px;
 }
 
 .about-text {
-  width: 50%;
+  width: 100%;
+  background: #191919;
+  padding: 25px;
 }
-/* 
-.img {
-  align-content: center;
-} */
 
 .main {
   width: 1130px;
@@ -159,7 +165,6 @@ h4 {
   color: white;
   font-size: 75px;
   text-transform: capitalize;
-  margin-bottom: 20px;
 }
 
 .about-text h5 {
@@ -196,24 +201,15 @@ button:hover {
 }
 
 .service {
-  background-color: #000;
   width: 100%;
-  padding: 100px 0px;
+  padding: 15px;
+  background: #191919;
+  margin-bottom: 75px;
 }
 
-.photo {
-  height: auto;
-  max-width: 50%;
-  margin-left: 100px;
-  margin-bottom: 10px;
-  margin-top: -90px;
-}
-
-.title h2 {
+.service h2 {
   color: white;
-  font-size: 75px;
-  width: 1030px;
-  margin: 30px auto;
+  font-size: 48px;
   text-align: center;
 }
 
@@ -221,16 +217,16 @@ button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 400px;
+  gap: 50px;
+  margin-bottom: 75px;
 }
 
 .card {
   height: auto;
-  width: 335px;
+  width: 100%;
   padding: 20px 35px;
   background: #191919;
   border-radius: 20px;
-  margin: 15px;
   position: relative;
   overflow: hidden;
   text-align: center;
@@ -246,14 +242,6 @@ button:hover {
   width: 170px;
   height: 150px;
 }
-
-/* .card i {
-  font-size: 50px;
-  display: block;
-  text-align: center;
-  margin: 25px 0px;
-  color: #f9004d;
-} */
 
 h5 {
   color: white;
@@ -297,7 +285,7 @@ h5 {
 
 .contact-me p {
   color: white;
-  font-size: 10px;
+  font-size: 15px;
   font-weight: bold;
   margin-bottom: 25px;
 }
@@ -356,7 +344,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: red;
+  background: white;
   border-radius: 50%;
   margin: 22px 10px;
   text-decoration: none;
